--- a/rabbitFiles/testRabbitMQ.ini
+++ b/rabbitFiles/testRabbitMQ.ini
@@ -8,4 +8,13 @@ EXCHANGE = testExchange
 QUEUE = testQueue
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
-
+[errorServer]
+BROKER_HOST = 127.0.0.1
+BROKER_PORT = 5672
+USER = test
+PASSWORD = test
+VHOST = testHost
+EXCHANGE = errorExchange
+QUEUE = errorQueue
+;EXCHANGE_TYPE = ????
+AUTO_DELETE = true
