woohoo backend now takes character data from rabbitMQ and puts it into proper tables

--- a/rabbitFiles/testRabbitMQ.ini
+++ b/rabbitFiles/testRabbitMQ.ini
@@ -18,3 +18,14 @@ EXCHANGE = errorExchange
 QUEUE = errorQueue
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
+[heroServer]
+BROKER_HOST = 127.0.0.1
+BROKER_PORT = 5672
+USER = test
+PASSWORD = test
+VHOST = testHost
+EXCHANGE = superExchange
+QUEUE = superQueue
+;EXCHANGE_TYPE = ????
+AUTO_DELETE = true
+
