--- a/listenerFiles/errorServer.service
+++ b/listenerFiles/errorServer.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=errorServer start up?
-After=network.target
+Requires=mysql.service apache2.service
 StartLimitInervalSec=0
 
 [Service]
