Added failover logic for backend

--- a/loginFiles/testRabbitMQ.ini
+++ b/loginFiles/testRabbitMQ.ini
@@ -1,4 +1,14 @@
 [testServer]
+BROKER_HOST = 10.128.82.115
+BROKER_PORT = 5672
+USER = test
+PASSWORD = test
+VHOST = testHost
+EXCHANGE = testExchange
+QUEUE = testQueue
+;EXCHANGE_TYPE = ????
+AUTO_DELETE = true
+[backupServer]
 BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
 USER = test
@@ -9,7 +19,7 @@ QUEUE = testQueue
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 [errorServer]
-BROKER_HOST = 127.0.0.1
+BROKER_HOST = 10.128.82.148
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
@@ -19,7 +29,7 @@ QUEUE = errorQueue
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 [heroServer]
-BROKER_HOST = 127.0.0.1
+BROKER_HOST = 10.128.82.148
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
