--- a/listenerFiles/errorServer.service
+++ b/listenerFiles/errorServer.service
@@ -2,13 +2,14 @@
 Description=errorServer start up?
 Requires=mysql.service apache2.service
 StartLimitIntervalSec=0
+StartLimitAction=reboot
 
 [Service]
 Type=simple
 Restart=always
 RestartSec=1
 User=kevin
-ExecStart= /home/kevin/git/IT490Comic/backend/errorServer.php
+ExecStart= /usr/bin/env php /home/kevin/git/IT490Comic/backend/errorServer.php
 
 [Install]
 WantedBy=multi-user.target
