front end attempts to work with backend failover

--- a/loginFiles/testRabbitMQ.ini
+++ b/loginFiles/testRabbitMQ.ini
@@ -1,5 +1,5 @@
 [testServer]
-BROKER_HOST = 127.0.0.1
+BROKER_HOST = 10.128.82.118
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
@@ -8,8 +8,20 @@ EXCHANGE = testExchange
 QUEUE = testQueue
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
+
+[backupServer]
+BROKER_HOST = 10.128.82.100
+BROKER_HOST = 5672
+USER = test
+PASSWORD = test
+VHOST = testHost
+EXCHANGE = testExchange
+QUEUE = testQueue
+;EXCHANGE_TYPE = ????
+AUTO_DELETE = true
+
 [errorServer]
-BROKER_HOST = 10.128.82.148
+BROKER_HOST = 10.128.82.100
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
@@ -19,7 +31,7 @@ QUEUE = errorQueue
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 [heroServer]
-BROKER_HOST = 10.128.82.148
+BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
