--- a/000-default.conf
+++ b/000-default.conf
@@ -23,10 +23,10 @@
 	
 	<Proxy balancer://mycluster>
 #	First Front end
-        	BalancerMember http://10.128.82.112:80
+        	BalancerMember http://10.128.82.122:80 timeout=5 retry=60
 
-	        BalancerMember http://10.128.82.116:80
-        	ProxySet lbmethod=byrequests
+	        BalancerMember http://10.128.82.112:80 timeout=5 retry=60
+        	ProxySet lbmethod=byrequests failontimeout=on
 	</Proxy>
 	ProxyPass / balancer://mycluster/
 
