DNS file changes

--- a/000-default.conf
+++ b/000-default.conf
@@ -23,10 +23,10 @@
 	
 	<Proxy balancer://mycluster>
 #	First Front end
-        	BalancerMember http://10.128.82.122:80 timeout=5 retry=60
+        	BalancerMember http://10.128.82.114:80 timeout=10 retry=60
 
-	        BalancerMember http://10.128.82.112:80 timeout=5 retry=60
-        	ProxySet lbmethod=byrequests failontimeout=on
+	        BalancerMember http://10.128.82.118:80 timeout=10 retry=60
+        	ProxySet lbmethod=byrequests failontimeout=off
 	</Proxy>
 	ProxyPass / balancer://mycluster/
 
